components/tweet/tweet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet
spec:
  selector:
    matchLabels:
      app: tweet
  template:
    metadata:
      labels:
        app: tweet
    spec:
      serviceAccount: tweet
      containers:
      - name: tweet
        image: diskmanti/linux_tweet_app:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        # - containerPort: 443
        #   protocol: TCP
