components/tweet/tweet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweet
spec:
  selector:
    app: tweet
  ports:
  - port: 80
    targetPort: 80
    name: https
