components/tweet/tweet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweet-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: tweet.kinder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: tweet
            port:
              name: https
  tls:
    - hosts:
      - tweet.kinder.com
      secretName: tweet-secret # do not change, this is provided by Argo CD
